<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputText"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputText"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputPhone"
        android:inputType="phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputNumber"
        android:inputType="number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputPassword"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputEMail"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/InputText"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

</LinearLayout>